# Teach_Yourself_C

./: .gitignore  CMakeLists.txt  README.md
Chap02/: ch02-01.c  ch02-06.c  ch02-07.c  ch02-8q01.c  noarg.c  witharg.c
Chap03/: ch03-00.c  ch03-02.c  ch03-03.c  ch03-04.c  ch03-05.c  ch03-07.c  ch03-08.c  ch03-09.c  ch03-10.c  ch03-11.c  ch03-12.c  ch03-ex.c
Chap04/: ch04-00.c  ch04-03.c  ch04-04.c  ch04-06.c  ch04-07.c  ch04-ex.c
Chap05/: ch05-00.c  ch05-01.c  ch05-02.c  ch05-03.c  ch05-04.c  ch05-05.c  ch05-ex.c
Chap06/: ch06-00.c
